@@ -9,6 +9,11 @@ Most recent changes (version wise) are at the top of this file
 All the changes are usually noted in this file when they are checked
 into the cvs repository.
 
+1999-10-13  Ales Hvezda  <ahvezda@geda.seul.org>
+
+	* src/x_fileselect.c: Fixed the callback setup for the enter key for
+	  Save As (so that it calls the save function instead of the open func)
+
 1999-10-12  Ales Hvezda  <ahvezda@geda.seul.org>
 
 	* src/x_fileselect.c: Changed filename_entry to be read-only
